--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -17,11 +16,19 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AquaInsight"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".NewRaiseActivty"
+            android:exported="false" />
+
+        <activity
+            android:name=".AdminActivity"
+            android:enableOnBackInvokedCallback="true"
+            android:exported="false"
+            android:theme="@style/MainAcitvity.design" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_login"
             android:theme="@style/Base.Theme.AquaInsight" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,11 +46,13 @@
 
         <activity
             android:name=".MainActivity"
-            android:theme="@style/MainAcitvity.design"
-            android:exported="false"/>
-        <activity android:name=".RegistrationActivity"
-            android:theme="@style/Base.Theme.AquaInsight"
-            android:exported="false"/>
+            android:enableOnBackInvokedCallback="true"
+            android:exported="false"
+            android:theme="@style/MainAcitvity.design" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:exported="false"
+            android:theme="@style/Base.Theme.AquaInsight" />
     </application>
 
 </manifest>
