--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-feature android:name="android.hardware.location.gps" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera.any" />
 
     <application
         android:allowBackup="true"
@@ -16,11 +20,13 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AquaInsight"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".CameraActivty"
+            android:exported="false" />
         <activity
             android:name=".NewRaiseActivty"
             android:exported="false" />
-
         <activity
             android:name=".AdminActivity"
             android:enableOnBackInvokedCallback="true"
@@ -29,7 +35,7 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Base.Theme.AquaInsight" >
+            android:theme="@style/Base.Theme.AquaInsight">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
